--- a/MacPatch/Self Patch/Self Patch/SelfPatchMainMenu.xib
+++ b/MacPatch/Self Patch/Self Patch/SelfPatchMainMenu.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9060" systemVersion="15C48a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment version="1060" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
+        <development version="6300" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -264,7 +265,7 @@
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1418"/>
             <value key="minSize" type="size" width="715" height="415"/>
             <view key="contentView" id="534">
-                <rect key="frame" x="0.0" y="5" width="715" height="415"/>
+                <rect key="frame" x="0.0" y="0.0" width="715" height="415"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <customView id="659" customClass="WindowViewSubclass">
@@ -326,7 +327,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="18" headerView="559" id="560">
-                                    <rect key="frame" x="0.0" y="0.0" width="715" height="188"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="715" height="20"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                     <size key="intercellSpacing" width="3" height="2"/>
@@ -508,7 +509,7 @@
                         </tableHeaderView>
                     </scrollView>
                     <box autoresizesSubviews="NO" borderType="line" id="539">
-                        <rect key="frame" x="10.000000752804196" y="16" width="695" height="62"/>
+                        <rect key="frame" x="10" y="16" width="695" height="62"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                         <view key="contentView">
                             <rect key="frame" x="1" y="1" width="693" height="46"/>
@@ -578,7 +579,7 @@
                         <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </box>
                     <box autoresizesSubviews="NO" title="Status" borderType="line" id="O4q-qS-0ar">
-                        <rect key="frame" x="10" y="69" width="695.00000075280423" height="59"/>
+                        <rect key="frame" x="10" y="69" width="695" height="59"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <view key="contentView">
                             <rect key="frame" x="1" y="1" width="693" height="43"/>
@@ -597,9 +598,12 @@
                                 <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" id="UFE-JD-Rxc">
                                     <rect key="frame" x="13" y="15" width="16" height="16"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <animations/>
                                 </progressIndicator>
                             </subviews>
+                            <animations/>
                         </view>
+                        <animations/>
                         <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                         <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </box>
