--- a/MacPatch Server/Server/conf/app/site/admin/css/mp.css
+++ b/MacPatch Server/Server/conf/app/site/admin/css/mp.css
@@ -1,4 +1,5 @@
-// jQgrid Styles
+/* jQgrid Styles */
+
 .xAltRow { background-color: #F0F8FF; background-image: none; color: #000; }
 
 .ui-jqgrid {font-size:12px;}
