Updated headers for templating

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,10 +10,9 @@
       <p id="llnl-menu-tab" class="pull-left"><a href="https://www.llnl.gov"></a></p>
 
       <a class="brand" href="/">{{ site.name }}</a>
-
-      <div class="nav-collapse collapse">
-        <ul class="nav"></ul>
-      </div>
     </div>
   </div>
+
+  {% include nav.html %}
+
 </div>
