--- a/MacPatch/MPCatalog/MPCatalog/MPCatalog_MainMenu.xib
+++ b/MacPatch/MPCatalog/MPCatalog/MPCatalog_MainMenu.xib
@@ -11,7 +11,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
                 <menuItem title="MPCatalog" id="56">
@@ -700,7 +700,7 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" selectionHighlightStyle="none" alternatingRowBackgroundColors="YES" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="20" headerView="550" id="549">
-                                    <rect key="frame" x="0.0" y="0.0" width="800" height="312"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="800" height="22"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <size key="intercellSpacing" width="3" height="2"/>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -720,9 +720,9 @@
                                                 </connections>
                                             </buttonCell>
                                             <connections>
+                                                <binding destination="545" name="value" keyPath="arrangedObjects.selected" id="697"/>
                                                 <binding destination="494" name="editable" keyPath="tableColEdit" id="700"/>
                                                 <binding destination="494" name="enabled" keyPath="tableColEdit" previousBinding="700" id="703"/>
-                                                <binding destination="545" name="value" keyPath="arrangedObjects.selected" id="697"/>
                                             </connections>
                                         </tableColumn>
                                         <tableColumn editable="NO" width="54" minWidth="10" maxWidth="1000" id="552">
@@ -879,7 +879,7 @@
                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </clipView>
                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="548">
-                            <rect key="frame" x="1" y="319" width="799.99999999999989" height="16"/>
+                            <rect key="frame" x="1" y="319" width="800" height="16"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="547">
@@ -981,11 +981,6 @@
                             </connections>
                         </searchField>
                     </toolbarItem>
-                    <toolbarItem implicitItemIdentifier="EECC5201-5262-4F89-8C78-EAEA6404E5A3" label="Reboot" paletteLabel="Reboot" tag="-1" id="771">
-                        <connections>
-                            <action selector="showRebootPanel:" target="494" id="772"/>
-                        </connections>
-                    </toolbarItem>
                     <toolbarItem implicitItemIdentifier="9B2A05B9-DDB1-497A-B90E-1C2878EDA419" label="Info" paletteLabel="Info" tag="-1" image="NSInfo" autovalidates="NO" id="825">
                         <connections>
                             <action selector="showSWDistInfo:" target="494" id="826"/>
@@ -994,16 +989,16 @@
                     <toolbarItem implicitItemIdentifier="B5EED9E8-E599-48AB-BF72-7D4996F8B21A" label="Software Groups" paletteLabel="Software Groups" id="834">
                         <nil key="toolTip"/>
                         <size key="minSize" width="120" height="19"/>
-                        <size key="maxSize" width="120" height="25"/>
+                        <size key="maxSize" width="160" height="25"/>
                         <popUpButton key="view" verticalHuggingPriority="750" id="828">
                             <rect key="frame" x="0.0" y="14" width="120" height="19"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            <popUpButtonCell key="cell" type="roundRect" title="Item 1" bezelStyle="roundedRect" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="829">
+                            <popUpButtonCell key="cell" type="roundRect" bezelStyle="roundedRect" imagePosition="overlaps" alignment="center" lineBreakMode="truncatingTail" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="829">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="titleBar" size="12"/>
+                                <font key="font" metaFont="cellTitle"/>
                                 <menu key="menu" title="OtherViews" id="830">
                                     <items>
-                                        <menuItem title="Item 1" state="on" id="831"/>
+                                        <menuItem title="Item 1" id="831"/>
                                         <menuItem title="Item 2" id="832"/>
                                         <menuItem title="Item 3" id="833"/>
                                     </items>
@@ -1027,7 +1022,6 @@
                     <toolbarItem reference="539"/>
                     <toolbarItem reference="834"/>
                     <toolbarItem reference="706"/>
-                    <toolbarItem reference="771"/>
                 </defaultToolbarItems>
             </toolbar>
             <point key="canvasLocation" x="465" y="374"/>
@@ -1114,6 +1108,7 @@
                     </button>
                 </subviews>
             </view>
+            <point key="canvasLocation" x="434" y="780"/>
         </window>
     </objects>
     <resources>
