--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,24 @@
-<div id="header-slim" class="navbar navbar-fixed-top navbar-noFixed">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+<nav id="header-slim" class="navbar navbar-default">
+
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#siteNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </a>
+      </button>
 
       <p id="llnl-menu-tab" class="pull-left"><a href="https://www.llnl.gov"></a></p>
-
-      <a class="brand" href="/">{{ site.name }}</a>
+      <a class="navbar-brand" href="/">{{ site.name }}</a>
     </div>
+
+    <div id="siteNavbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right navbar-collapse">
+        <li id="home"><a href="/">Catalog</a></li>
+        <li id="about" {% if page.url == "/about/" %} class="active" {% endif %}><a href="/about/">About</a></li>
+        <li id="github"><a href="https://github.com/llnl"><span class="fa fa-github fa-lg"></span></a></li>
+      </ul>
+    </div>
+
   </div>
-
-  {% include nav.html %}
-
-</div>
+</nav>
