Updated footer to user proper bootstrap3 columns

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
   <br />
 
   <div class="row">
-    <div class="span12 subfooter">
+    <div class="col-md-12 subfooter">
       <a href="http://www.llnl.gov/" target="_blank"><img src="/static/assets/images/llnl.png" alt="LLNL" border="0" /></a>
       <p> Lawrence Livermore National Laboratory <br /> 7000 East Avenue &bull; Livermore, CA 94550 </p>
       <p> Operated by Lawrence Livermore National Security, LLC, for the <br /> Department of Energy's National Nuclear Security Administration. </p>
@@ -15,7 +15,7 @@
       <a class="llns" href="http://www.llnsllc.com/" target="_blank"><img src="/static/assets/images/llns.png" alt="LLNS" border="0" /></a>
     </div>
 
-    <div class="span12 subfooter">
+    <div class="col-md-12 subfooter">
       <span>LLNL-WEB-680594 &nbsp;|&nbsp;&nbsp;</span>
       <a href="https://www.llnl.gov/disclaimer" target="_blank">Privacy &amp; Legal Notice</a>
     </div>
