Removed unnecessary border configuration in footer <a>'s

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,12 +7,12 @@
 
   <div class="row">
     <div class="col-md-12 subfooter">
-      <a href="http://www.llnl.gov/" target="_blank"><img src="/static/assets/images/llnl.png" alt="LLNL" border="0" /></a>
+      <a href="http://www.llnl.gov/" target="_blank"><img src="/static/assets/images/llnl.png" alt="LLNL"/></a>
       <p> Lawrence Livermore National Laboratory <br /> 7000 East Avenue &bull; Livermore, CA 94550 </p>
       <p> Operated by Lawrence Livermore National Security, LLC, for the <br /> Department of Energy's National Nuclear Security Administration. </p>
-      <a class="nnsa" href="http://nnsa.energy.gov/" target="_blank"><img src="/static/assets/images/nnsa.png" alt="NNSA" border="0" /></a>
-      <a class="doe" href="http://energy.gov/" target="_blank"><img src="/static/assets/images/doe_small.png" alt="U.S. DOE" border="0" /></a>
-      <a class="llns" href="http://www.llnsllc.com/" target="_blank"><img src="/static/assets/images/llns.png" alt="LLNS" border="0" /></a>
+      <a class="nnsa" href="http://nnsa.energy.gov/" target="_blank"><img src="/static/assets/images/nnsa.png" alt="NNSA"/></a>
+      <a class="doe" href="http://energy.gov/" target="_blank"><img src="/static/assets/images/doe_small.png" alt="U.S. DOE"/></a>
+      <a class="llns" href="http://www.llnsllc.com/" target="_blank"><img src="/static/assets/images/llns.png" alt="LLNS"/></a>
     </div>
 
     <div class="col-md-12 subfooter">
