--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <link rel="shortcut icon" href="/static/assets/images/favicon.ico">
 
   <link rel="stylesheet" href="/static/css/llnl.css" media="screen">
+  <link rel="stylesheet" href="/static/css/custom.css" media="screen">
   <link rel="stylesheet" href="/static/bootstrap-3.3.5/css/bootstrap.min.css" media="screen">
   <link rel="stylesheet" href="/static/font-awesome-4.4.0/css/font-awesome.min.css" media="screen">
 </head>
