--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,14 +9,14 @@
       </button>
 
       <p id="llnl-menu-tab" class="pull-left"><a href="https://www.llnl.gov"></a></p>
-      <a class="navbar-brand" href="/">{{ site.name }}</a>
+      <!-- <a class="navbar-brand" href="/">{{ site.name }}</a> -->
     </div>
 
     <div id="siteNavbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right navbar-collapse">
-        <li id="home"><a href="/">Catalog</a></li>
-        <li id="about" {% if page.url == "/about/" %} class="active" {% endif %}><a href="/about/">About</a></li>
-        <li id="github"><a href="https://github.com/llnl"><span class="fa fa-github fa-lg"></span></a></li>
+        <li id="home"><a href="/">Home</a></li>
+        <li id="documentation" {% if page.url == "/docs" %} class="active" {% endif %}><a href="/docs">Documentation</a></li>
+        <li id="github"><a href="https://github.com/LLNL/MacPatch"><span class="fa fa-github fa-lg"></span></a></li>
       </ul>
     </div>
 
