--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,8 @@
 
     <div id="siteNavbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right navbar-collapse">
-        <li id="home"><a href="/">Home</a></li>
-        <li id="documentation" {% if page.url == "/documentation" %} class="active" {% endif %}><a href="/documentation">Documentation</a></li>
+        <li id="home" {% if page.url == "/" %} class="active" {% endif %}><a href="/">Home</a></li>
+        <li id="documentation" {% if page.url contains "/docs" %} class="active" {% endif %}><a href="/docs">Documentation</a></li>
         <li id="github"><a href="https://github.com/LLNL/MacPatch"><span class="fa fa-github fa-lg"></span></a></li>
       </ul>
     </div>
