Fixed github link to go to the SMSG-MAC-DEV MacPatch repo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav navbar-right navbar-collapse">
         <li id="home" {% if page.url == "/" %} class="active" {% endif %}><a href="/">Home</a></li>
         <li id="documentation" {% if page.url contains "/docs" %} class="active" {% endif %}><a href="/docs">Documentation</a></li>
-        <li id="github"><a href="https://github.com/LLNL/MacPatch"><span class="fa fa-github fa-lg"></span></a></li>
+        <li id="github"><a href="https://github.com/SMSG-MAC-DEV/MacPatch"><span class="fa fa-github fa-lg"></span></a></li>
       </ul>
     </div>
 
