--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -12,7 +12,7 @@ table tr {
 }
 table td {
     padding:18px;
-    border-top: 1px solid #ffffff;
+    border-top: 1px solid #e0e0e0;
     border-bottom:1px solid #e0e0e0;
     border-left: 1px solid #e0e0e0;
 }
