--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -6,12 +6,13 @@ table th {
     padding:21px 25px 22px 25px;
     border-top:1px solid #e0e0e0;
     border-bottom:1px solid #e0e0e0;
+    background: #f2f2f2;
 }
 table tr {
     padding-left:10px;
 }
 
-tr:nth-child(even) {background: #d9d9d9}
+tr:nth-child(even) {background: #f2f2f2}
 tr:nth-child(odd) {background: #FFF}
 
 table td {
