--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -21,3 +21,13 @@ table td {
     border-bottom:1px solid #e0e0e0;
     border-left: 1px solid #e0e0e0;
 }
+
+li p.first {
+  display: inline-block; }
+li {
+  margin: 0; }
+ul, ol {
+  padding-left: 30px; }
+
+ul :first-child, ol :first-child {
+  margin-top: 0; }
