--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,8 +4,8 @@ table {
 }
 table th {
     padding:21px 25px 22px 25px;
-    border-top:1px solid #e0e0e0;
-    border-bottom:1px solid #e0e0e0;
+    border-top:1px solid #d9d9d9;
+    border-bottom:1px solid #d9d9d9;
     background: #f2f2f2;
 }
 table tr {
@@ -17,9 +17,9 @@ tr:nth-child(odd) {background: #FFF}
 
 table td {
     padding:10px;
-    border-top: 1px solid #e0e0e0;
-    border-bottom:1px solid #e0e0e0;
-    border-left: 1px solid #e0e0e0;
+    border-top: 1px solid #d9d9d9;
+    border-bottom:1px solid #d9d9d9;
+    border-left: 1px solid #d9d9d9;
 }
 
 li p.first {
