--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,6 @@
   <link rel="stylesheet" href="/static/css/custom.css" media="screen">
   <link rel="stylesheet" href="/static/bootstrap-3.3.5/css/bootstrap.min.css" media="screen">
   <link rel="stylesheet" href="/static/font-awesome-4.4.0/css/font-awesome.min.css" media="screen">
+
+  {% include google_analytics.html %}
 </head>
